Add reset password APIs
